AlexQuijote Commit 34. Correcciones.

--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -75,7 +75,7 @@
     "we":{
         "title":"NOSOTROS",
         "person-1":"Roger Prado De La Fuente",
-        "person-1_description":"Administrador de empresas cam amplia experiencia en startups, international public speaker que ha dado charlas en diferentes paises de sudamerica",
+        "person-1_description":"Administrador de empresas con amplia experiencia en Startups, international public speaker, que ha dado charlas en diferentes países de sudamérica",
         "person-2":"Pedro Terán Gezn",
         "person-2_description":"Programador y arquitecto de software  con más de 10 años de experiencia trabajando en proyectos globales y dirigido equipos de desarrollo técnico multiculturales.",
         "person-3":"Milenka Escobar Pereira",
