new samantha picture

--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -75,15 +75,15 @@
     "we":{
         "title":"NOSOTROS",
         "person-1":"Roger Prado De La Fuente",
-        "person-1_description":"Administrador de empresas con amplia experiencia en Startups, international public speaker, que ha dado charlas en diferentes países de sudamérica",
+        "person-1_description":"Administrador de empresas con amplia experiencia en Startups, international public speaker, que ha dado charlas en diferentes países de Sudamérica",
         "person-2":"Pedro Terán Gezn",
         "person-2_description":"Programador y arquitecto de software  con más de 10 años de experiencia trabajando en proyectos globales y dirigido equipos de desarrollo técnico multiculturales.",
         "person-3":"Milenka Escobar Pereira",
-        "person-3_description":"Gestora de proyectos tecnológico-culturales para agencias de desarrollo internacionales, instituciones públicas y de la sociedad civil; considerando la Cultura e Innovación (C+I) para generar cambios positivos haciendo de cada proyecto una experiencia.",
+        "person-3_description":"Gestora de proyectos tecnológico-culturales para agencias de desarrollo internacionales, instituciones públicas; considerando la Cultura e Innovación (C+I) para generar cambios positivos haciendo de cada proyecto una experiencia.",
         "person-4":"Samantha Ayleen Rueda",
-        "person-4_description":"Egresada de idiomas por la Universidad Central del Ecuador, y artista apasionada por la danza clásica y la cultura libre, deseo que a través de éstas, acontesca un cambio social.",
+        "person-4_description":"Linguista apasionada por la cultura y el arte digital, aportanto valor en cada proyecto tecnologico. ",
         "person-5":"Melania San Miguel Chacón",
-        "person-5_description":"Facilitadora certificada por la OIT, ha encabezado equipos para la implementación de programas de capacitación, su trabajo gira en torno a temas relacionados a la gestión del patrimonio natural y cultural, al desarrollo de emprendimientos en las áreas urbana y rural, así como al buen aprovechamiento de los recursos turísticos, con una perspectiva de sostenibilidad.",
+        "person-5_description":"Facilitadora certificada por la OIT, ha liderado equipos para la implementación de programas de capacitación en turismo, su trabajo gira en torno al desarrollo de emprendimientos turistico-tecnologicos en las áreas urbana y rural.",
         "paragraph":"Está compuesto por un equipo de innovadores con experiencia, conocimiento y responsabilidad en diferentes áreas, desde el desarrollo de plataformas, soluciones blockchain y servicios digitales enfocados en cambiar la experiencia del usuario hasta la asesoría en cultura digital desde enfoques interculturales."
     },
     "production":{
