AlexQuijote. Commit 41. Carrusél terminado.

--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -82,7 +82,7 @@
         "person-3":"Milenka Escobar Pereira",
         "person-3_description":"Gestora de proyectos tecnológico-culturales para agencias de desarrollo internacionales, instituciones públicas; considerando la Cultura e Innovación (C+I) para generar cambios positivos haciendo de cada proyecto una experiencia.",
         "person-4":"Samantha Ayleen Rueda",
-        "person-4_description":"Linguista apasionada por la cultura y el arte digital, aportanto valor en cada proyecto tecnologico. ",
+        "person-4_description":"Lingüista apasionada por la cultura y el arte digital, aportando valor en cada proyecto tecnológico. ",
         "person-5":"Melania San Miguel Chacón",
         "person-5_description":"Facilitadora certificada por la OIT, ha liderado equipos para la implementación de programas de capacitación en turismo, su trabajo gira en torno al desarrollo de emprendimientos turistico-tecnologicos en las áreas urbana y rural.",
         "paragraph":"Está compuesto por un equipo de innovadores con experiencia, conocimiento y responsabilidad en diferentes áreas, desde el desarrollo de plataformas, soluciones blockchain y servicios digitales enfocados en cambiar la experiencia del usuario hasta la asesoría en cultura digital desde enfoques interculturales."
