AlexQuijote. Commit 42. Navbar construido con pseudoelementos terminado.

--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -67,9 +67,9 @@
     },
     "nav":{
         "title":"Nav Bar",
-        "title-1":"Nosotros",
-        "title-2":"Nuestra experiencia",
-        "title-3":"Aliados",
+        "title-1":"Servicios",
+        "title-2":"Nosotros",
+        "title-3":"Nuestra Experiencia",
         "title-4":"Oficina virtual",
         "title-5":"Inicio"
     },
