AlexQuijote Commit 44. Construídas las líneas del navbar con pseudo elementos before y after.

--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -70,8 +70,7 @@
         "title-1":"Servicios",
         "title-2":"Nosotros",
         "title-3":"Nuestra Experiencia",
-        "title-4":"Oficina virtual",
-        "title-5":"Inicio"
+        "title-4":"Oficina virtual"
     },
     "we":{
         "title":"NOSOTROS",
