Cambios de texto.

--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -13,14 +13,14 @@
         "title":"Arte Digital NFT's",
         "paragraph.0":"El desarrollo de los diferentes ecosistemas digitales basado en plataformas Blockchain han dado surgimiento a los NFTs (tokens no fungibles) definidos como activos digitales que están revolucionando el mundo del arte, los videojuegos, los bienes raíces, etc.",
         "paragraph.1":"- Desarrollo de plataformas de tokenización NFTs.",
-        "paragraph.2":"- Diseño de espacios virtuales en los Metaversos.",
+        "paragraph.2":"- Diseño y desarrollo de espacios virtuales en Metaversos.",
         "paragraph.3":"- Asesoría para el desarrollo de proyectos NFTs."
     },
     "digital-projects":{
         "title":"Coaching Digital",
         "paragraph.0":"Programa de Coaching Digital: “Puente Digital hacia el Dorado”. El programa de coaching digital está dirigido a emprendedores y startups que se encuentran en la transición hacia lo digital, y quieren contar con una  estrategia concreta para llevar  su emprendimiento al siguiente nivel. El objetivo es abrir la visión a las posibilidades que la migración digital puede brindar de cara al futuro.",
         "paragraph.1":"- 5 Videotutoriales mediante los cuales se interioriza en el mundo del coaching digital contando con una estrategia de marketing y crecimiento empresarial.",
-        "paragraph.2":"- 2 Sesiones en vivo con un coach certificado.   ",
+        "paragraph.2":"- 2 Sesiones en vivo con un coach certificado miembro de la Red Global de Mentores. ",
         "paragraph.3":"- 1 caja de herramientas digitales con las que se podrá entender cómo funciona la lógica de las distintas redes sociales para la promoción de sus productos o servicios. ¡Bono extra! Introducción al  mundo de Payoneer y las posibilidades que abre esta tarjeta, teniendo una vía segura y accesible de cobros y pagos."
     },
     "commerce":{
@@ -83,11 +83,11 @@
     "we":{
         "title":"NOSOTROS",
         "person-1":"Roger Prado De La Fuente",
-        "person-1_description":"Administrador de empresas con amplia experiencia en Startups, international public speaker, que ha dado charlas en diferentes países de Sudamérica",
+        "person-1_description":"Administrador de empresas con amplia experiencia en Startups, international public speaker, que ha dado charlas en diferentes países de Sudamérica.",
         "person-2":"Pedro Terán Gezn",
         "person-2_description":"Programador y arquitecto de software  con más de 10 años de experiencia trabajando en proyectos globales y dirigido equipos de desarrollo técnico multiculturales.",
         "person-3":"Milenka Escobar Pereira",
-        "person-3_description":"Gestora de proyectos tecnológico-culturales para agencias de desarrollo internacionales, instituciones públicas; considerando la Cultura e Innovación (C+I) para generar cambios positivos haciendo de cada proyecto una experiencia.",
+        "person-3_description":"Gestora de proyectos tecnológico-culturales para agencias de desarrollo internacionales, instituciones públicas y privadas, encontrando en la tecnología y cultura (C+T) la sinergia perfecta para la innovación, haciendo de cada proyecto una experiencia.",
         "person-4":"Samantha Ayleen Rueda",
         "person-4_description":"Lingüista apasionada por la cultura y el arte digital, aportando valor en cada proyecto tecnológico. ",
         "person-5":"Melania San Miguel Chacón",
@@ -108,8 +108,8 @@
     "sightseeing":{
         "title":"Turismo Virtual",
         "paragraph.0":"El turismo también está aprovechando todo lo que ofrece la nueva era digital ya que, a través del uso de plataformas y herramientas digitales como la realidad virtual y aumentada, las personas, pueden visitar lugares de interés histórico-cultural como museos, zonas arqueológicas milenarias, centros históricos, sitios naturales entre otros, adentrándose a ellos teniendo como límite su imaginación.",
-        "paragraph.1":"Formar parte del Laboratorio de Turismo Virtual, aprendiendo a aplicar estrategias y herramientas digitales que  ayuden a generar nuevos proyectos en turismo, donde se brinde una experiencia que motive a los nuevos turistas virtuales a viajar a través del tiempo y el ciberespacio para visitar lugares mágicos.",
-        "paragraph.2":"Asesoría para el desarrollo de  proyectos turístico-tecnológicos."
+        "paragraph.1":"- Formar parte del Laboratorio de Turismo Virtual, aprendiendo a aplicar estrategias y herramientas digitales participando en Boot camps y encuentros, que  ayuden a generar nuevos proyectos en turismo, brindando una experiencia que motive a los nuevos turistas virtuales a viajar a través del ciberespacio.",
+        "paragraph.2":"- Asesoría para el desarrollo de  proyectos turístico-tecnológicos."
     },
     "developers":{
         "title":"Head Hunting Developers Nueva Zelanda",
